--- a/grc338/css-mobile-first/lasagnastyle.css
+++ b/grc338/css-mobile-first/lasagnastyle.css
@@ -51,7 +51,8 @@ h3 {
 }
 
 li {
-	margin: 1rem;
+	display: list-item;
+	margin: 0.1rem 1rem 1rem;
 }
 
 figcaption {
@@ -69,7 +70,7 @@ li {
 }
 
 ul, ol {
-	margin: 1rem;
+	margin: 0rem 0rem 2rem;
 }
 
 footer {
