--- a/style.css
+++ b/style.css
@@ -10,7 +10,23 @@ img {
     position: relative;
 }
 
+button {
+    border-color: #fc6c85;
+    margin: 5px;
+}
+
+p {
+    font-size: 1.5 rem;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+
 div {
     display: grid;
     place-items: center;
+
+}
+
+.a {
+    display: inline-flex;
 }
